# notion-cli-rs

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: API_COMPARISON.md  ARCHITECTURE-ko.md  ARCHITECTURE.md  CARGO.md
src/: cli.rs  client.rs  commands.rs  main.rs  render.rs  utils.rs
