[package]
name = "notion-cli-rs"
version = "0.1.0"
edition = "2021"
description = "A fast and simple Notion CLI written in Rust"
authors = ["demarlik01-ai"]
repository = "https://github.com/demarlik01/notion-cli-rs"
license = "MIT"
keywords = ["notion", "cli", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
anyhow = "1"
colored = "2"
toml = "0.9.11"
dirs = "6.0.0"

[[bin]]
name = "notion-cli"
path = "src/main.rs"
